# backend-engineer-interview-for-candidates

./: .gitignore  README.md  alembic.ini  app.db  openapi.yaml  pyproject.toml  setup.cfg
backend_engineer_interview/: __main__.py  app.py  handlers.py  models.py
backend_engineer_interview/db/: env.py
backend_engineer_interview/db/versions/: 11b7d12c8562_employee_table.py  cd8f3f10f609_create_employees.py
tests/: conftest.py  test_backend_engineer_interview.py
