[tool.poetry]
name = "backend-engineer-interview"
version = "0.1.0"
description = ""
authors = ["Michael Kalish <michael.kalish@focusconsulting.io>"]

[tool.poetry.dependencies]
alembic = "^1.4.2"
connexion = {extras = ["swagger-ui"], version = "^2.11.1"}
ebcdic = "^1.1.1"
factory_boy = "^3.2.0"
faker = "^4.2.0"
paramiko = "^2.7.2"
psycopg2-binary = "^2.8.5"
puremagic = "^1.10"
pydantic = {extras = ["dotenv"], version = "~1.8.2"}
pydash = "^4.7.6"
python = "^3.9"
python-dateutil = "^2.8.1"
pyyaml = "^5.4.0"
requests = "^2.24.0"
requests-pkcs12 = "^1.7"
requests_oauthlib = "^1.3.0"
sqlalchemy = "^1.4.*"
Flask = "^2.0.3"
SQLAlchemy-Utils = "^0.37.8"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^22.1.0"
flake8 = "^3.7.9"
flake8-alfred = "^1.1.1"
flake8-bugbear = "^20.1.4"
freezegun = "^0.3.15"
isort = "^4.3.21"
mypy = "^0.910"
oyaml = "^1.0"
pydot = "^1.4.2"
pyopenssl = "^19.1.0"
pytest = "^6.0.0"
pytest-httpserver = "^0.3.6"
pytest-mock = "^3.3.1"
pytest-testmon = "^1.0.2"
pytest-timeout = "^1.4.1"
pytest-watch = "^4.2.0"
pytest-xdist = "^2.2.1"
rich = "^10.14.0"
sadisplay = "^0.4.9"
safety = "^1.9.0"
types-PyYAML = "5.4.10"
types-cryptography = "^3.3.5"
types-enum34 = "1.1.0"
types-ipaddress = "1.0.0"
types-paramiko = "0.1.9"
types-python-dateutil = "2.8.0"
types-pytz = "2021.1.2"
types-requests = "2.25.6"
types-six = "1.16.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.32"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
